Fixed images on mobile

--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -1,11 +1,6 @@
-.display {
-    div {
-        overflow: unset !important;
-        div {
-            img {
-                object-fit: contain;
-            }
-        }
+.image {
+    img {
+        object-fit: contain;
     }
 }
 
